--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Digital-7";
-    src: url("/assets/digital-7.ttf");
+    src: url("./assets/digital-7.ttf");
 }
 
 body {
