--- a/rank.css
+++ b/rank.css
@@ -42,8 +42,8 @@ body {
     margin: 0;
     padding: 0;
     /* font-size: 13rem; */
-    /* font-size: 12vw; */
-    font-size: 19vh;
+    font-size: 11.2vw;
+    /* font-size: 19vh; */
 }
 
 #id-container {
@@ -54,7 +54,8 @@ body {
 }
 .rank-id {
     font-family: "Digital-7", monospace;
-    font-size: 5vh;
+    /* font-size: 5vh; */
+    font-size: 2.1vw;
     font-weight: bold;
 }
 
@@ -62,5 +63,16 @@ body {
     #hex-img {
         width: 100%;
         height: 100%;
+    }
+    .rank-number {
+        font-family: "Digital-7", monospace;
+        margin: 0;
+        padding: 0;
+        /* font-size: 13rem; */
+        font-size: 25vw;
+        /* font-size: 19vh; */
+    }
+    .rank-id {
+        font-size: 5vw;
     }
 }
